# DreamFoundation

./: CMakeLists.txt  build.sh  setup.py
include/Dream/: Dream.h  LoggerLite.h  LoggerPro.h
include/glad/: gl.h
src/Dream/: LoggerLite.c
